Fix breadcrumb display on mobile

--- a/src/implementations/vanilla/components/page-header/page-header-eu.scss
+++ b/src/implementations/vanilla/components/page-header/page-header-eu.scss
@@ -110,8 +110,12 @@
   }
 
   .ecl-page-header__breadcrumb {
-    position: absolute;
     background-color: transparent;
+    left: 0;
+    padding-inline-start: map.get(theme.$spacing, 'm');
+    padding-inline-end: map.get(theme.$spacing, 'm');
+    position: absolute;
+    top: 0;
     transform: translateY(-100%);
   }
 
